# cnn

课程设计/untitled/: CMakeLists.txt  main.cpp  readme.md  test.cpp  train.cpp
课程设计/untitled/DatasetConversion/: dataset.txt  labals.txt  main.py
课程设计/untitled/GUI/: GUi.py  photo.txt
课程设计/untitled/NetWorkDatas/: 32xNetWorkData-200epochs.txt  32xNetWorkData-300epochs.txt
课程设计/untitled/dataset/train/: dataset  label
课程设计/untitled/dataset/val/: dataset  label
课程设计/untitled/dataset_128x/train/: label
